Add new route to server, fix open api doc, and fix client side app and respective tests
