# static-content/spa/handlers/rentalshandlers.js
@@ -3,21 +3,19 @@ import pagination from "./views/pagination.js";
 import rentalsViews from "./views/rentalsviews.js"
 import rentalsRequests from "./requests/rentalsrequests.js"
 import errorsViews from "./views/errorsview.js";
-import auxiliaryFuns from "./auxfuns.js";
 import courtsRequests from "./requests/courtsrequests.js";
 import courtsViews from "./views/courtsviews.js";
 import uriManager from "../managers/uriManager.js";
+import auxfuns from "../handlers/auxfuns.js";
 
 const { DEFAULT_VALUE_SKIP, DEFAULT_VALUE_LIMIT} = pagination
-const { renderRentalDetailsView, renderCalendarToSearchRentals, renderUpdateRentalView } = rentalsViews
-const { fetchRentalDetails,  } = rentalsRequests
+const { renderRentalDetailsView, renderCalendarToSearchRentals, renderUpdateRentalView, renderRentalCreationForm } = rentalsViews
+const { fetchRentalDetails} = rentalsRequests
 const { errorView } = errorsViews
 const { path, query } = request
-const { isValidDate, isValidHour, parseHourFromString, getFinalRentalHours, contains} = auxiliaryFuns
-const { renderRentalAvailableFinalHours, renderCourtRentalsView } = courtsViews
-const { listCourtRentalsUri, getCourtAvailableHoursUri, getAvailableHoursByDateUri, getAvailableHoursByDateAndStartUri,
-    getRentalDetailsUri}
-    = uriManager
+const { renderCourtRentalsView } = courtsViews
+const { listCourtRentalsUri, getRentalDetailsUri, getCourtDetailsUri} = uriManager
+const { parseHourFromString } = auxfuns
 
 
 async function getRentalDetails(contentHeader, content) {
@@ -36,56 +34,37 @@ async function getRentalDetails(contentHeader, content) {
 async function createRental(contentHeader, content) {
     const cid = Number(path("cid"))
     const crid = Number(path("crid"))
+
     const date = query("date")
-    const initialHour = query("start")
-    const finalHour = query("end")
+    const startHour = query("start")
+    const endHour = query("end")
 
-    const isDateValid = isValidDate(date)
-    const isInitialHourValid = isValidHour(initialHour)
-    const isFinalHourValid = isValidHour(finalHour)
-
-    if (!isDateValid || !isInitialHourValid) {
-        errorView(contentHeader, content, getCourtAvailableHoursUri(cid, crid),
-            {title: "Invalid hours or date", description: "Invalid date or hour format "}
-        )
-        return
+    const rentalInfo = {date: null, startHour: null, endHour: null}
+    if(date != null && startHour != null && endHour != null){
+        rentalInfo.date = date
+        rentalInfo.startHour = startHour
+        rentalInfo.endHour = endHour
     }
 
-    const startHour = parseHourFromString(initialHour)
+    const onSubmit = async function(e){
+        e.preventDefault()
+        const date = e.target.querySelector("#date").value
+        const startHour = e.target.querySelector("#startHour").value
+        const endHour = e.target.querySelector("#endHour").value
+        const response = await rentalsRequests.createRental(cid, crid, date, parseHourFromString(startHour), parseHourFromString(endHour))
 
-    if (isFinalHourValid) {
-        const endHour = parseHourFromString(finalHour)
-
-        const rental = await rentalsRequests.createRental(cid, crid, date, startHour, endHour)
-
-        if (rental.status === 201) {
-            window.location.hash = listCourtRentalsUri(cid,crid, DEFAULT_VALUE_SKIP, DEFAULT_VALUE_LIMIT)
+        if (response.status === 201) {
+            window.location.hash = getRentalDetailsUri(cid, crid, response.data.rid)
         } else {
-            errorView(contentHeader, content, getAvailableHoursByDateUri(cid,crid,date), rental.data)
+            errorView(contentHeader, content, getCourtDetailsUri(cid, crid), response.data)
         }
-        return
     }
 
-    const availableHours = await courtsRequests.getAvailableHours(cid, crid, date)
+    renderRentalCreationForm(contentHeader, content, cid, crid, rentalInfo, onSubmit)
 
-    if (availableHours.status !== 200) {
-        errorView(contentHeader, content, getCourtAvailableHoursUri(cid,crid), availableHours.data)
-        return
-    }
-
-    if (!contains(availableHours.data.hours, startHour)) {
-        errorView(contentHeader, content, getAvailableHoursByDateAndStartUri(cid,crid,date,initialHour), {
-            title: "Hour not available",
-            description: `The selected hour is not available on ${date}`
-        })
-        return
-    }
-
-    const finalRentalHours = getFinalRentalHours(availableHours.data.hours, startHour)
-    renderRentalAvailableFinalHours(contentHeader, content, initialHour, finalRentalHours, cid, crid, date, startHour)
 }
 
-function updateRental(contentHeader, content) {
+async function updateRental(contentHeader, content) {
     const cid = Number(path("cid"))
     const crid = Number(path("crid"))
     const rid = Number(path("rid"))
@@ -109,7 +88,7 @@ function updateRental(contentHeader, content) {
     } else {
         errorView(contentHeader, content, listCourtRentalsUri(cid, crid, DEFAULT_VALUE_SKIP, DEFAULT_VALUE_LIMIT), response.data);
     }
-    
+
 }
 
 async function deleteRental(contentHeader, content) {
@@ -131,6 +110,7 @@ async function deleteRental(contentHeader, content) {
 function searchRentals(contentHeader, content) {
     const cid = path("cid")
     const crid = path("crid")
+
     const skip = Number(query("skip")) || DEFAULT_VALUE_SKIP
     const limit = Number(query("limit")) || DEFAULT_VALUE_LIMIT
 
@@ -146,19 +126,19 @@ function searchRentals(contentHeader, content) {
         const hasNext = rsp.data.rentals.length > limit
 
         renderCourtRentalsView(
-        contentHeader,
-        content,
-        rentals,
-        cid,
-        crid,
-        skip,
-        limit,
-        hasNext
-    )
+            contentHeader,
+            content,
+            rentals,
+            cid,
+            crid,
+            skip,
+            limit,
+            hasNext
+        )
     }
 
     renderCalendarToSearchRentals(contentHeader, content, handleSubmit, cid, crid)
-    
+
 }
 
 const rentalsHandlers= {
